# revolving_pendulum

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  pendulumwidget.cpp  pendulumwidget.h
